# word-processor-Qt

./: .gitignore  CMakeLists.txt  README.md  createComponent.js  dictionary.cpp  dictionary.h  documenthandler.cpp  documenthandler.h  example.html  main.cpp  notes.cpp  notes.h  texteditor.html  texthighlighter.cpp  texthighlighter.h
imports/: CMakeLists.txt
imports/text/: CMakeLists.txt  qmldir
imports/text/designer/: plugin.metainfo
include/: dictionary.h  documenthandler.h  notes.h
qml/: PageBreak.qml  page.qml  texteditor.qml  wordprocessor.qml
resources/: enable1.txt
src/: dictionary.cpp  documenthandler.cpp  notes.cpp  texthighlighter.cpp
